// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateHistoryTransform(definition) should generate a valid summary transform 1`] = `
Object {
  "defer_validation": true,
  "dest": Object {
    "index": ".entities-observability.history-v1.noop",
    "pipeline": ".entities-observability.history-v1.admin-console-services",
  },
  "frequency": "1m",
  "pivot": Object {
    "aggs": Object {
      "_errorRate_A": Object {
        "filter": Object {
          "bool": Object {
            "minimum_should_match": 1,
            "should": Array [
              Object {
                "match_phrase": Object {
                  "log.level": "ERROR",
                },
              },
            ],
          },
        },
      },
      "_logRate_A": Object {
        "filter": Object {
          "bool": Object {
            "minimum_should_match": 1,
            "should": Array [
              Object {
                "exists": Object {
                  "field": "log.level",
                },
              },
            ],
          },
        },
      },
      "entity.latestTimestamp": Object {
        "max": Object {
          "field": "@timestamp",
        },
      },
      "entity.metadata.host.name": Object {
        "terms": Object {
          "field": "host.name",
          "size": 1000,
        },
      },
      "entity.metadata.tags": Object {
        "terms": Object {
          "field": "tags",
          "size": 1000,
        },
      },
      "entity.metrics.errorRate": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "A": "_errorRate_A>_count",
          },
          "script": Object {
            "lang": "painless",
            "source": "params.A",
          },
        },
      },
      "entity.metrics.logRate": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "A": "_logRate_A>_count",
          },
          "script": Object {
            "lang": "painless",
            "source": "params.A",
          },
        },
      },
    },
    "group_by": Object {
      "@timestamp": Object {
        "date_histogram": Object {
          "field": "@timestamp",
          "fixed_interval": "1m",
        },
      },
      "entity.identityFields.event.category": Object {
        "terms": Object {
          "field": "event.category",
          "missing_bucket": true,
        },
      },
      "entity.identityFields.log.logger": Object {
        "terms": Object {
          "field": "log.logger",
          "missing_bucket": false,
        },
      },
    },
  },
  "settings": Object {
    "deduce_mappings": false,
    "unattended": true,
  },
  "source": Object {
    "index": Array [
      "kbn-data-forge-fake_stack.*",
    ],
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "gte": "now-5m",
              },
            },
          },
        ],
      },
    },
  },
  "sync": Object {
    "time": Object {
      "delay": "60s",
      "field": "@timestamp",
    },
  },
  "transform_id": "entity-history-v1-admin-console-services",
}
`;

exports[`generateSummaryTransform(definition) should generate a valid summary transform 1`] = `
Object {
  "defer_validation": true,
  "dest": Object {
    "index": ".entities-observability.summary-v1.noop",
    "pipeline": ".entities-observability.summary-v1.admin-console-services",
  },
  "frequency": "1m",
  "pivot": Object {
    "aggs": Object {
      "_errorRate": Object {
        "aggs": Object {
          "metric": Object {
            "avg": Object {
              "field": "entity.metric.errorRate",
            },
          },
        },
        "filter": Object {
          "range": Object {
            "@timestamp": Object {
              "gte": "now-5m",
            },
          },
        },
      },
      "_logRate": Object {
        "aggs": Object {
          "metric": Object {
            "avg": Object {
              "field": "entity.metric.logRate",
            },
          },
        },
        "filter": Object {
          "range": Object {
            "@timestamp": Object {
              "gte": "now-5m",
            },
          },
        },
      },
      "entity.firstSeenTimestamp": Object {
        "min": Object {
          "field": "@timestamp",
        },
      },
      "entity.latestTimestamp": Object {
        "max": Object {
          "field": "@timestamp",
        },
      },
      "entity.metadata.host.name": Object {
        "terms": Object {
          "field": "host.name",
          "size": 1000,
        },
      },
      "entity.metadata.tags": Object {
        "terms": Object {
          "field": "tags",
          "size": 1000,
        },
      },
      "entity.metric.errorRate": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "value": "_errorRate>metric",
          },
          "script": "params.value",
        },
      },
      "entity.metric.logRate": Object {
        "bucket_script": Object {
          "buckets_path": Object {
            "value": "_logRate>metric",
          },
          "script": "params.value",
        },
      },
    },
    "group_by": Object {
      "entity.displayName": Object {
        "terms": Object {
          "field": "entity.displayName",
        },
      },
      "entity.id": Object {
        "terms": Object {
          "field": "entity.id",
        },
      },
      "entity.identityFields.event.category": Object {
        "terms": Object {
          "field": "entity.identityFields.event.category",
          "missing_bucket": true,
        },
      },
      "entity.identityFields.log.logger": Object {
        "terms": Object {
          "field": "entity.identityFields.log.logger",
          "missing_bucket": false,
        },
      },
    },
  },
  "settings": Object {
    "deduce_mappings": false,
    "unattended": true,
  },
  "source": Object {
    "index": ".entities-observability.history-v1.admin-console-services.*",
  },
  "sync": Object {
    "time": Object {
      "delay": "60s",
      "field": "event.ingested",
    },
  },
  "transform_id": "entity-summary-v1-admin-console-services",
}
`;
